# x32-notes

./: CLAUDE.md  PLAN.md  config.toml  notes.db  pyproject.toml
examples/: copy.scn  scene.scn  variant_test.scn
frontend/: channel.html  index.html  scene.html
frontend/components/: dyn-graph.js  eq-curve.js  eq-detail.js
frontend/css/: app.css
frontend/js/: api.js  app.js  utils.js  variant.js
server/: config.py  main.py  watcher.py
server/db/: database.py  notes.py
server/parser/: __init__.py  channel.py  parameters.py  scene.py  snippet.py  writer.py
server/routers/: events.py  health.py  notes.py  scenes.py
tests/: test_api.py  test_parser.py
