[project]
name = "x32-lib"
version = "0.1.0"
description = "X32 scene parser and notes server"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.137.0",
    "uvicorn[standard]>=0.49.0",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "playwright>=1.60.0",
    "pytest>=9.1.0",
]
